--- a/templates/fill_questionnaire.html
+++ b/templates/fill_questionnaire.html
@@ -54,7 +54,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Пациенты</a></li>
                 <li><a href="/questionnaire/create">Заполнить анкету</a></li>
-                <li><a href="/dump_excel">Сделать выгрузку</a></li>
+                <li><a href="/api/statistics/excel">Сделать выгрузку</a></li>
             </ul>
         </div>
     </nav>
