--- a/templates/main.html
+++ b/templates/main.html
@@ -80,7 +80,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Пациенты</a></li>
                 <li><a href="/patients/add">Добавить пациента</a></li>
-                <li><a href="/dump_excel">Сделать выгрузку</a></li>
+                <li><a href="/api/statistics/excel">Сделать выгрузку</a></li>
             </ul>
         </div>
     </nav>
