--- a/templates/create_patient.html
+++ b/templates/create_patient.html
@@ -20,6 +20,13 @@
                 yearRange: "1900:+0" // диапазон годов
             });
 
+            $('#operation_date').datepicker({
+                dateFormat: 'yy-mm-dd',
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "1900:+0"
+            });
+
             $('#patient-form').on('submit', function(event) {
                 event.preventDefault(); // Остановить стандартное поведение формы
 
@@ -28,7 +35,8 @@
                     birthday_date: $('#birthday_date').val(),
                     phone: $('#phone').val(),
                     passport_number: $('#passport_number').val(),
-                    email: $('#email').val()
+                    email: $('#email').val(),  // Added the missing comma here
+                    operation_date: $('#operation_date').val(),
                 };
 
                 $.ajax({
@@ -56,8 +64,8 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="/">Пациенты</a></li>
-                <li><a href="/patients/add">Добавить пациента</a></li>
-                <li><a href="/dump_excel">Сделать выгрузку</a></li>
+                <li><a href="/patients/create">Добавить пациента</a></li>
+                <li><a href="/api/statistics/excel">Сделать выгрузку</a></li>
             </ul>
         </div>
     </nav>
@@ -92,6 +100,12 @@
                 <label for="email" class="col-sm-2 control-label">Email</label>
                 <div class="col-sm-10">
                     <input type="email" class="form-control" id="email" name="email">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="operation_date" class="col-sm-2 control-label">Дата операции</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="operation_date" name="operation_date" required>
                 </div>
             </div>
             <div class="form-group">
